--- a/src/photoCardRegular/editor.scss
+++ b/src/photoCardRegular/editor.scss
@@ -13,3 +13,8 @@ img.card-static-image {
      filter: grayscale(75%);
      filter: opacity(50%);
 }
+
+.clb-card__description {
+     padding: 20px;
+     background: #f5f5f5;
+}
