duotone icon cards working

--- a/src/iconCardRegular/editor.scss
+++ b/src/iconCardRegular/editor.scss
@@ -1,6 +1,7 @@
-.clb-icon-card-static {
+.icon-card-regular-static {
      text-align: center;
      background: #0066cc;
      color: #fff;
      padding: 16px;
+     border-radius: 5px;
 }
