button cards working normally w improved CSS

--- a/src/buttonCardRegular/style.css
+++ b/src/buttonCardRegular/style.css
@@ -1,4 +1,8 @@
 .clb-button-area .button.full {
      width: 100%;
      text-align: center;
+     height: 100%;
+     display: flex;
+     align-items: center;
+     justify-content: center;
 }
